--- a/assets/css/media-rtl.css
+++ b/assets/css/media-rtl.css
@@ -137,6 +137,40 @@
         padding-right: 15px;
         padding-left: 15px;
     }
+
+    .services .service .outer-border {
+    height: 150px;
+    width: 150px;
+    background: #4bb8e6;
+    border: 5px solid #4bb8e6;
+    border-radius: 50%;
+    text-align: center;
+    /* margin: auto; */
+    /* padding: 0 5px 5px 0; */
+    /* box-sizing: border-box; */
+}
+
+.services .service .outer-border .white-border {
+    height: 140px;
+    width: 139px;
+    align-self: baseline;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    background: #4bb8e6;
+    /* padding: 10px 0 0 0; */
+    /* margin: 10px 0 0 0; */
+    /* margin: 5px 0 0 5px; */
+    /* margin: calc(100% - 316px) auto; */
+}
+    .services .service .outer-border .white-border img {
+    max-width: 80%;
+    width: 50%;
+    line-height: 150px;
+    margin-top: calc(100% - 100px);
+    /* display: none; */
+}
+
+
     /*------------------ Services End ------------------------ */
     /*------------------ Contact Start ------------------------ */
     .contact {}
@@ -212,12 +246,176 @@
 
 /* ----- MD --------- MD --------- MD --------- MD --------- MD --------- MD --------- MD --------- MD ----*/
 
-@media(min-width: 768px) and (max-width: 991px) {}
+@media(min-width: 768px) and (max-width: 991px) {
+ /* Navbar Start */
+    .bg-light {
+        height: auto;
+    }
+    .navbar .form-inline {
+        display: none;
+    }
+    .nav-item.mobile {
+        display: inline-block;
+    }
+    body {
+        position: relative;
+    }
+    .navbar-light .navbar-nav .nav-link {
+        padding: 10px 10px 2px 10px;
+        margin: 0;
+        font-size: 14px;
+    }
+    .navbar-nav.mobile {
+        display: inline-block;
+        position: absolute;
+        left: 25%;
+        font-size: 26px;
+        z-index: 999;
+    }
+    .notification .far {
+        color: #B08A16;
+    }
+    .navbar-brand {
+        width: 50%;
+    }
+    .navbar-nav.mobile .dropdown-menu.last {
+        left: auto;
+        /*    left: 0px !important;*/
+        padding: 6px 25px;
+    }
+    .dropdown-item {
+        color: rgba(0, 0, 0, .5);
+        padding: 0;
+        padding: .5rem 0;
+        border: none;
+        padding: 10px 10px 2px 10px;
+        margin: 0;
+        font-size: 14px;
+        width: auto;
+    }
+    .dropdown-menu.show {
+        border: none;
+        padding: 10px 10px 2px 10px;
+        margin: 0;
+        font-size: 14px;
+    }
+    /* Navbar End */
+    /*------------------ Home Start ------------------------ */
+    .home {}
+    .home .home-img {}
+    .home .home-img img {}
+    .home .home-content {}
+    .home .home-content h3 {
+        margin-top: 34px;
+        font-size: 19px;
+    }
+    .home .home-content h1 {
+        font-size: 40px;
+    }
+    .home .home-content p {
+        padding: 6px 10px;
+        font-size: 16px;
+        line-height: 1.3;
+    }
+    .home .img-store {}
+    .home .img-store img {
+        max-width: 60%;
+    }
+    /*------------------ Home End ------------------------ */
+    /*------------------ About Start ------------------------ */
+    .about {}
+    .about .about-img {}
+    .about .about-img img {
+        display: none;
+    }
+    .about .about-intro {
+        text-align: center;
+        padding: 0;
+        bottom: 120px;
+        right: 420px;
+        left: 300px;
+        background-color: #4bb8e6;
+        color: white;
+        padding-right: 20px;
+        padding-left: 20px;
+        text-align: center;
+        border-top-right-radius: 3px;
+        border-top-left-radius: 3px;
+        margin-right: 0px;
+        padding-bottom: 20px;
+    }
+    .about .about-intro h2 {
+        margin-bottom: 35px;
+        color: #fff;
+        padding-top: 1em;
+        margin-top: 0px;
+    }
+    .about .about-intro p {
+        font-size: 16px;
+        text-align: center;
+        font-size: 14px;
+        font-family: Raleway-Regular;
+        margin: 0 0 10px;
+        line-height: 1.8;
+        color: #fff;
+    }
+    .about .our-vision {
+        position: static;
+        border: none;
+        padding-bottom: 20px;
+        border-radius: 0px;
+        border-bottom-right-radius: 3px;
+        border-bottom-left-radius: 3px;
+    }
+    .about .our-vision h4 {
+        font-size: 24px;
+    }
+    .about .our-vision p {
+        text-align: justify;
+    }
+    /*------------------ About End ------------------------ */
+    /*------------------ Services Start ------------------------ */
+    .services .col-md-4 {
+        padding: 0px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    /*------------------ Services End ------------------------ */
+    /*------------------ Contact Start ------------------------ */
+    .contact {}
+    .contact .logo-img {
+        text-align: center;
+    }
+    .contact .logo-img img {}
+    .contact .contact-info {
+        padding-bottom: 30px;
+        padding-top: 40px;
+    }
+    .contact .contact-info i {
+        font-size: 30px;
+    }
+    .contact .contact-info span {}
+    .contact .contact-info span a {}
 
+}
+@media(min-width: 992px) and (max-width: 1024px) {
+        .about .about-intro p {
+    font-size: 18px;
+    line-height: 1.3em;
+
+}
+}
 
 /* ---- LG ------- LG ------- LG ------- LG ------- LG ------- LG ------- LG ------- LG -------- LG ------- */
 
-@media(min-width: 1024px) and (max-width: 1366px) {}
+@media(min-width: 1024px) and (max-width: 1365px) {
+
+    .about .our-vision{
+                bottom: 15px;
+        right: 270px;
+        left: 23px;
+    }
+}
 
 
 /* ------- XL ----------- XL ----------- XL ----------- XL ----------- XL ----------- XL ----------- XL ---- */
