--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,32 +302,46 @@ ul {
     padding-top: 78px;
 }
 
+.services h2 {
+    text-align: center;
+    font-family: Raleway-Bold;
+    color: #4bb8e6;
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 50px;
+}
+
 .services .col-md-4 {
     padding: 0px;
 }
 
 .services .service {
+    /* text-align: center !important; */
     /* box-sizing: border-box; */
     margin-top: 30px;
     margin-bottom: 30px;
+    /* margin: 30px auto; */
 }
 
 .services .service .outer-border {
-    height: 329px;
-    width: 330px;
+    height: 150px;
+    width: 150px;
     background: #4bb8e6;
     border: 5px solid #4bb8e6;
     border-radius: 50%;
     text-align: center;
+    margin-left: 50%;
+    margin-left: calc(50% - 80px);
     /* margin: auto; */
     /* padding: 0 5px 5px 0; */
     /* box-sizing: border-box; */
 }
 
 .services .service .outer-border .white-border {
-    height: 320px;
-    width: 320px;
-    align-self: baseline;
+    height: 140px;
+    width: 140px;
+    /* align-self: baseline; */
     border: 2px solid #fff;
     border-radius: 50%;
     background: #4bb8e6;
@@ -338,9 +352,10 @@ ul {
 }
 
 .services .service .outer-border .white-border img {
-    max-width: 80%;
-    width: 50%;
-    margin-top: calc(100% - 226px);
+    max-width: 60%;
+    /* width: 50%; */
+    margin-top: calc(100% - 109px);
+    /* line-height: 140px; */
     /* display: none; */
 }
 
